# xradar_uq

./: .dir-locals.el  .envrc  .gitignore  CR3BP.m  KLdivstop.m  MAIN.asv  PropagateInitialPDF.m  PropagateSamples.m  README.org  angles_only.m  angles_only_jacobian.m  angles_only_vectorized.m  crtbp_filters_prop.m  crtbp_prop.m  engmf_update.m  filter_loop_shrinking_area.py  gausssplit.m  gmmpdf.m  kde_silverman.m  main.m  prop_ptbp.m  pyproject.toml  share_start.m  update.m
Data/: InitialStates.csv  PropagatedStates.csv
Test/: test_engmf_update.m  test_engmf_update_in_loop.m  test_gmm.m
cache/: README.org  posterior_1000_window.npy  times_found.csv  true_state_1000.npy
examples/: dynamical_system.py  dynamical_system_plotting.py  filter_loop.py  filter_loop_multiple_satellites.py  filter_loop_rarer_measurements.py  filter_loop_simulate_trajectory.py  filter_loop_windowing.py  kd_trees.py  maneuver_heatmap.py  maneuver_plot.py  measurement_system.py  numerical_integration.py  plot_state_space_model.py  reachability.py  resampling.py  saving_arrays.py  silverman_kde.py  tqdm_progress_bars.py  triangulations.py
tests/: test_distributions.py  test_project_structure.py
xradar_uq/: __init__.py
xradar_uq/dynamical_systems/: __init__.py  cr3bp.py  dynamical_system_abc.py
xradar_uq/filters/: __init__.py  engmf.py  enkf.py
xradar_uq/measurement_systems/: __init__.py  angles_only.py  measurement_system_abc.py  radar.py  range_sensor.py  windowing.py
xradar_uq/plotting/: README.org  fov_plot.py  projections.py
xradar_uq/statistics/: __init__.py  random_impulse_velocity.py  silverman_kde.py
xradar_uq/stochastic_filters/: __init__.py  engmf.py  enkf.py  stochastic_filter_abc.py
xradar_uq/units/: cr3bp_units.py
