[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project]
name = "filtering"
version = "0.1.0"
dependencies = [
    "jax",
    "jaxtyping",
    "beartype",
    "equinox",
    "numpy",
    "diffrax",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[tool.mypy]
python_executable = ".direnv/python-3.11.11/bin/python"