[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xradar_uq"]

[project]
name = "xradar_uq"
version = "0.1.0"
dependencies = [
    "jax",
    "jaxtyping",
    "beartype",
    "equinox",
    "diffrax",
    "distrax",
    "matplotlib",
    "tensorflow_probability",
    "distreqx",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[tool.mypy]
python_executable = ".direnv/python-3.11.11/bin/python"

[tool.flake8]
extend-ignore = ["F722"]

[tool.pylsp]
plugins.pyflakes.ignore = ["F722"]
